# fraud-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  mkdocs.yaml  pyproject.toml  requirements-developer.txt  requirements.txt
.github/workflows/: ci.yaml  deploy_docs.yaml
config/: config.py  config.yaml
docs/: index.md
lib/: api.py  data_processing.py  load_config.py  model.py  utils.py
lib/streamlit_app/: main.py
lib/streamlit_app/app_pages/: explainability_page.py  inference_page.py
models/feature_engineering/: feature_engineer.pkl
models/fraud_detection/: fraud_detection_model.pkl
notebooks/: data_ingestion.ipynb  meridian_lab_answers.ipynb  modelling.ipynb
tests/: test_modeling.py
