[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
authors = [
  { name = "Alberto Stella", email = "alberto.stella@artefact.com" },
  { name = "Pablo Vizan Siso", email = "pablo.siso@artefact.com" },
  { name = "Calogero Zarbo", email = "calogero.zarbo@artefact.com" },
]
description = "Repository developed for the project Early Trend Watcher for Dolce&Gabbana"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/artefactory-nl-nl/fraud-detection"
"Documentation" = "https://artefactory-nl.github.io/fraud-detection-artefact/"

[tool.setuptools]
packages = [
  "lib",
  "config",
  "tests",
]

[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "D",
  "ANN",
  "Q",
  "RET",
  "ARG",
  "PTH",
  "PD",
] # See: https://beta.ruff.rs/docs/rules/
ignore = ["D203", "D213", "ANN101", "ANN102"]
line-length = 100
target-version = "py310"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.isort]
known-first-party = ["lib", "config", "tests"]

[tool.bandit.assert_used]
exclude_dirs = ["tests/"]
