[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
authors = [
  { name = "Arthur Lambert", email = "arthur.lamebrt238@gmail.com" },
]
description = "Repository developed for the purpose of fraud detection."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/turo-lambert/fraud-detection"

[tool.setuptools]
packages = [
  "lib",
  "config",
  "tests",
]

[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "D",
  "ANN",
  "Q",
  "RET",
  "ARG",
  "PTH",
  "PD",
] # See: https://beta.ruff.rs/docs/rules/
ignore = ["D203", "D213", "ANN101", "ANN102", "N803"]
line-length = 120
target-version = "py310"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.isort]
known-first-party = ["lib", "config", "tests"]

[tool.bandit.assert_used]
exclude_dirs = ["tests/"]
